Ajuste mensagem modal

--- a/analisadorSintatico.html
+++ b/analisadorSintatico.html
@@ -126,9 +126,10 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Deseja realmente limpar a tabela?</h4>
+                        <h4 class="modal-title">Atenção</h4>
                     </div>
                     <div class="modal-body">
+                        <p>Deseja realmente limpar a tabela?</p>
                         <p>Esta operação não pode ser revertida</p>
                     </div>
                     <div class="modal-footer">
